added h3 tags to body in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
     <title>rant-fml</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but platzi-music-custom doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    <h5>welcome to rant-fml this app gives lets you listen to a 30 second preview</h5>
+    <h5>of any song we have</h5>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
