added noscript tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
     <title>rant-fml</title>
   </head>
   <body>
-    <h5>welcome to rant-fml this app gives lets you listen to a 30 second preview</h5>
-    <h5>of any song we have</h5>
+    <noscript>
+      <h5>welcome to rant-fml this app gives lets you listen to a 30 second preview</h5>
+      <h5>of any song we have</h5>
+    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
