--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
   </head>
   <body>
     <noscript>
-      <h5>welcome to rant-fml this app gives lets you listen to a 30 second preview</h5>
-      <h5>of any song we have</h5>
+      <span>welcome to rant-fml this app gives lets you listen to a 30 second preview</span>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
